# LOKI

./: .coverage  .coveragerc  .flake8  .gitignore  CHANGELOG  Dockerfile  README.md  __init__.py  loki-build.py  requirements.txt  setup.py
.github/: branch-protection.yml
.github/workflows/: ci.yml  format.yml
biofilter_Li/: ._loki-build.py  CHANGELOG  PKG-INFO  biofilter.configuration
biofilter_Li/loki/: ._loki_db.py  ._loki_source.py  loki_db.py
biofilter_Li/loki/loaders/: ._loki_source_biogrid.py  ._loki_source_chainfiles.py  ._loki_source_dbsnp.py  ._loki_source_entrez.py  ._loki_source_go.py  ._loki_source_gwas.py  ._loki_source_kegg.py  ._loki_source_mint.py  ._loki_source_netpath.py  ._loki_source_oreganno.py  ._loki_source_pfam.py  ._loki_source_pharmgkb.py  ._loki_source_reactome.py  ._loki_source_ucsc_ecr.py
branches/1.0/doc/: Pathway.odg  testing.doc  testing.odt
branches/1.0/updater/: Makefile.am  bio_loader.py  dbsettings.py
branches/1.0/updater/loadPops/: Makefile.am  buildPopulations.py  ldsplineimporter.cpp  ldsplineimporter.h  main.cpp
branches/1.0/updater/loaders/: load_ensembl.py  load_reactome.py
branches/1.0/updater/loaders/util/: bioloader.py
branches/1.0/updater/src/: bio_loader.py  bioloader.py  biosettings.py  load_biogrid.py  load_chainfiles.py  load_ensembl.py  load_go.py  load_kegg.py  load_mint.py  load_netpath.py  load_pfam.py  load_pharmgkb.py  load_reactome.py  ncbi_loader.py  region_manager.py
branches/2.0/: Makefile.am  loki-build.py  loki.py  loki_db.py  loki_source.py  loki_source_go.py  loki_source_kegg.py  loki_source_mint.py  loki_updater.py  setup.py
branches/2.0-entity/: biofilter.py
branches/2.0-entity/loki/: __init__.py  db.py  source.py  source_genes.py  source_go.py  source_snps.py
branches/2.0-fuzzylink/: Makefile.am  loki.py  loki_db.py  loki_source.py  loki_source_biogrid.py  loki_source_dbsnp.py  loki_source_entrez.py  loki_source_go.py  loki_source_kegg.py  loki_source_mint.py  loki_source_netpath.py  loki_source_pfam.py  loki_source_pharmgkb.py  loki_updater.py  notes
branches/2.0-fuzzylink/loadPops/: ldsplineimporter.h
branches/2.0-fuzzylink/loaders/: loki_source_mint.py  loki_source_netpath.py  loki_source_pfam.py  loki_source_pharmgkb.py
branches/2.0-fuzzylink/util/: liftOver.py
branches/2.0-structure/: loki_source_biogrid.py
branches/2.0-structure/loadPops/: ldsplineimporter.h
branches/2.0-structure/loaders/: loki_source_chainfiles.py  loki_source_dbsnp.py  loki_source_reactome.py
branches/2.0/loadPops/: buildPopulations.py  ldsplineimporter.cpp  ldsplineimporter.h
branches/2.0/loaders/: loki_source_biogrid.py  loki_source_chainfiles.py  loki_source_dbsnp.py  loki_source_ecrbase.py  loki_source_entrez.py  loki_source_go.py  loki_source_kegg.py  loki_source_mint.py  loki_source_netpath.py  loki_source_oreganno.py  loki_source_pfam.py  loki_source_pharmgkb.py  loki_source_reactome.py  loki_source_ucsc_ecr.py
branches/2.0/loaders/test/: loki_source_genes.py  loki_source_light.py  loki_source_paint.py  loki_source_snps.py  loki_source_spectrum.py  loki_source_test_S1.py  loki_source_test_S2.py  loki_source_test_gene.py  loki_source_test_light.py  loki_source_test_paint.py  loki_source_test_snp.py
branches/2.0/util/: liftOver.py
branches/2.x-omicunits/: Makefile.am  loki-build.py  setup.py
branches/2.x-omicunits/loki/: loki_db.py  loki_source.py  loki_updater.py
branches/species/: loki-build.py
branches/species/loki/: loki_db.py  loki_source.py  loki_updater.py
loki/: loki_db.py  loki_source.py  loki_updater.py
loki/loaders/: loki_source_biogrid.py  loki_source_chainfiles.py  loki_source_dbsnp.py  loki_source_entrez.py  loki_source_gaad.py  loki_source_go.py  loki_source_gwas.py  loki_source_kegg.py  loki_source_mint.py  loki_source_oreganno.py  loki_source_pfam.py  loki_source_pharmgkb.py  loki_source_reactome.py  loki_source_ucsc_ecr.py
loki/util/: liftOver.py
permutation/: 0301.ods  0301pvals.ods  permuloki-models.pbs  permuloki-urand.pbs  permuloki.pbs  permuloki.py  permuplot.py  permuscan.pbs  permuscan.py  permuscanall.py  plotall.py  scoresummary.py  scoresummary_calcLine.py
tests/: conftest.py  test_loki_db.py
tests/loaders/: test_biogrid.py
tests/loki_db/: loki_db_methods_list.py  test_loki_db_connections.py  test_loki_db_interrogation.py  test_loki_db_logging.py  test_loki_db_management.py  test_loki_db_schema.py
trunk/: CHANGELOG  loki-build.py  loki_db.py  setup.py
trunk/loki/: loki_db.py  loki_source.py  loki_updater.py
unsupported_loaders/: loki_source_disgenet.py  loki_source_gaad.py  loki_source_kegg.py  loki_source_netpath.py
(+42 files in other folders)
